[package]
edition      = "2021"
name         = "led-rainbow"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "led-rainbow"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }

# esp-backtrace = { version = "0.18.0", features = ["esp32s3", "println"]}
critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["esp32s3"]}
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "println"] }
esp-hal-smartled = "0.16.0"
smart-leds = "0.4.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
